@@ -24,7 +24,7 @@ repositories {
 
 dependencies {
     compile 'commons-collections:commons-collections:3.2.2'
-    compile 'commons-dbcp:commons-dbcp:1.4'
+    compile 'org.apache.commons:commons-dbcp2:2.7.0'
     compile 'log4j:log4j:1.2.17'
     compile 'org.springframework:spring-beans:5.1.10.RELEASE'
     compile 'org.springframework:spring-jdbc:5.1.10.RELEASE'
