@@ -6,6 +6,6 @@ APPNAME=RGDGff3Pipeline
 APPDIR=/home/rgddata/pipelines/$APPNAME
 
 cd $APPDIR
-java -Dspring.config=$APPDIR/../properties/default_db.xml \
+java -Dspring.config=$APPDIR/../properties/default_db2.xml \
     -Dlog4j.configuration=file://$APPDIR/properties/log4j.properties \
     -jar lib/$APPNAME.jar "$@"
